@@ -1,18 +1,15 @@
-## Script (Python) "livesearch_reply"
+## Script (Python) "livescript_reply"
 ##bind container=container
 ##bind context=context
 ##bind namespace=
 ##bind script=script
 ##bind subpath=traverse_subpath
 ##parameters=q,limit=10
-##title=
-##
+##title=Determine whether to show an id in an edit form
 
 from Products.CMFCore.utils import getToolByName
 from Products.CMFPlone import PloneMessageFactory as _
-from Products.CMFPlone.utils import safe_unicode
 from Products.PythonScripts.standard import url_quote
-from Products.PythonScripts.standard import url_quote_plus
 
 ploneUtils = getToolByName(context, 'plone_utils')
 pretty_title_or_id = ploneUtils.pretty_title_or_id
@@ -62,14 +59,10 @@ r = " AND ".join(r)
 r = quote_bad_chars(r)+'*'
 searchterms = url_quote(r.replace(' ','+'))
 
-site_encoding = context.plone_utils.getSiteEncoding()
-
 results = catalog(SearchableText=r, portal_type=friendly_types)
 
-searchterm_query = '?searchterm=%s'%url_quote_plus(q)
-
 RESPONSE = context.REQUEST.RESPONSE
-RESPONSE.setHeader('Content-Type', 'text/xml;charset=%s' % site_encoding)
+RESPONSE.setHeader('Content-Type', 'text/xml;charset=%s' % context.plone_utils.getSiteEncoding())
 
 # replace named entities with their numbered counterparts, in the xml the named ones are not correct
 #   &darr;      --> &#8595;
@@ -81,63 +74,56 @@ label_show_all = _('label_show_all', default='Show all&#8230;')
 
 ts = getToolByName(context, 'translation_service')
 
-output = []
-
-def write(s):
-    output.append(safe_unicode(s))
-
-
 if not results:
-    write('''<fieldset class="livesearchContainer">''')
-    write('''<legend id="livesearchLegend">%s</legend>''' % ts.translate(legend_livesearch))
-    write('''<div class="LSIEFix">''')
-    write('''<div id="LSNothingFound">%s</div>''' % ts.translate(label_no_results_found))
-    write('''<div class="LSRow">''')
-    write('<a href="search_form" style="font-weight:normal">%s</a>' % ts.translate(label_advanced_search))
-    write('''</div>''')
-    write('''</div>''')
-    write('''</fieldset>''')
+    print '''<fieldset class="livesearchContainer">'''
+    print '''<legend id="livesearchLegend">%s</legend>''' % ts.translate(legend_livesearch)
+    print '''<div class="LSIEFix">'''
+    print '''<div id="LSNothingFound">%s</div>''' % ts.translate(label_no_results_found)
+    print '''<div class="LSRow">'''
+    print '<a href="search_form" style="font-weight:normal">%s</a>' % ts.translate(label_advanced_search)
+    print '''</div>'''
+    print '''</div>'''
+    print '''</fieldset>'''
 
 else:
-    write('''<fieldset class="livesearchContainer">''')
-    write('''<legend id="livesearchLegend">%s</legend>''' % ts.translate(legend_livesearch))
-    write('''<div class="LSIEFix">''')
-    write('''<ul class="LSTable">''')
+    print '''<fieldset class="livesearchContainer">'''
+    print '''<legend id="livesearchLegend">%s</legend>''' % ts.translate(legend_livesearch)
+    print '''<div class="LSIEFix">'''
+    print '''<ul class="LSTable">'''
     for result in results[:limit]:
 
         itemUrl = result.getURL()
         if result.portal_type in useViewAction:
             itemUrl += '/view'
-        itemUrl = itemUrl + searchterm_query
 
-        write('''<li class="LSRow">''')
-        write('''<img src="%s"/>''' % result.getIcon)
-        full_title = safe_unicode(pretty_title_or_id(result))
-        if len(full_title) > MAX_TITLE:
+        print '''<li class="LSRow">''',
+        print '''<img src="%s"/>''' % result.getIcon,
+        full_title = pretty_title_or_id(result)
+        if len(full_title) >= MAX_TITLE:
             display_title = ''.join((full_title[:MAX_TITLE],'...'))
         else:
             display_title = full_title
-        full_title = full_title.replace('"', '&quot;')
-        write('''<a href="%s" title="%s">%s</a>''' % (itemUrl, full_title, display_title))
-        write('''<span class="discreet">[%s%%]</span>''' % result.data_record_normalized_score_)
-        display_description = safe_unicode(result.Description)
-        if len(display_description) > MAX_DESCRIPTION:
+        print '''<a href="%s" title="%s">%s</a>''' % (itemUrl, full_title, display_title)
+        print '''<span class="discreet">[%s%%]</span>''' % result.data_record_normalized_score_
+        display_description = result.Description
+        if len(display_description) >= MAX_DESCRIPTION:
             display_description = ''.join((display_description[:MAX_DESCRIPTION],'...'))
-        write('''<div class="discreet" style="margin-left: 2.5em;">%s</div>''' % (display_description))
-        write('''</li>''')
+        print '''<div class="discreet" style="margin-left: 2.5em;">%s</div>''' % (display_description)
+        print '''</li>'''
         full_title, display_title, display_description = None, None, None
 
-    write('''<li class="LSRow">''')
-    write( '<a href="%s" style="font-weight:normal">%s</a>' % (container.portal_url() + '/search_form', ts.translate(label_advanced_search)))
-    write('''</li>''')
+    print '''<li class="LSRow">'''
+    print '<a href="%s/search_form" style="font-weight:normal">%s</a>' % (container.portal_url(), ts.translate(label_advanced_search))
+    print '''</li>'''
 
     if len(results)>limit:
         # add a more... row
-        write('''<li class="LSRow">''')
-        write( '<a href="%s" style="font-weight:normal">%s</a>' % (container.portal_url() +'/search?SearchableText=' + searchterms, ts.translate(label_show_all)))
-        write('''</li>''')
-    write('''</ul>''')
-    write('''</div>''')
-    write('''</fieldset>''')
+        print '''<li class="LSRow">'''
+        print '<a href="%s" style="font-weight:normal">%s</a>' % (container.portal_url() + '/search?SearchableText=' + searchterms, ts.translate(label_show_all))
+        print '''</li>'''
+    print '''</ul>'''
+    print '''</div>'''
+    print '''</fieldset>'''
 
-return '\n'.join(output).encode(site_encoding)
+return printed
+
