@@ -1,1 +1,1 @@
-2.0rc7
+2.0
