@@ -1,9 +1,10 @@
 Changelog for UCDPloneSkin
 
-UCDPloneSkin 2.0 - Released - May 4 2007
+UCDPloneSkin 2.0 - Released - May 5 2007
    - reverted to tables in the header
    - new favicon with transparency
    - fixed hideDeptName option
+   - fixed live_search bug due to copying and pasting original code
 
 UCDPloneSkin 2.0rc7 - Pending - May 3 2007
   [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
